--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.js",
-        "use": "@now/node"
-      }
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.js",
-        "methods": ["GET","POST","PATCH","DELETE","OPTIONS","PUT"]
-      }
+        {
+            "src": "/(.*)",
+            "dest": "/", 
+            "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
+        }
     ]
-  }
+}
